--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
   </head>
   <body>
     <div id="formularioLog">
-      <h1>Sign up</h1>
       <form action="login.php" method="post">
-        <p>Dni</p>
-        <input type="text" placeholder="Dni" name="dni" /><br />
-        <p>Pass</p>
-        <input type="text" placeholder="Pass" name="pass" /><br /><br />
+        <h1>Sign up</h1>
+        <fieldset>
+          <legend>Dni</legend>
+          <input type="text" placeholder="Dni" name="dni" />
+        </fieldset>
+        <br />
+        <fieldset>
+          <legend>Pass</legend>
+          <input type="password" placeholder="Pass" name="pass" />
+        </fieldset>
+        <br /><br />
         <button type="submit">Login</button>
       </form>
     </div>
